--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         a.click();
         document.body.removeChild(a);
     }
+    window.addEventListener("resize", function () {
+        document.body.height = innerHeight + "px";
+    });
 </script>
 
 </body>
